[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clusterlens"
version = "0.1.0"
description = "An interpretability engine for clustered / segmented data."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Aktham Momani" }
]
keywords = ["clustering", "explainability", "shap", "interpretability", "segmentation"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "matplotlib>=3.7",
  "seaborn>=0.12",
  "scikit-learn>=1.3",
  "shap>=0.44",
  "category-encoders>=2.6"
]

[project.optional-dependencies]
lightgbm = ["lightgbm>=4.0"]
xgboost = ["xgboost>=2.0"]

[project.urls]
"Homepage" = "https://github.com/akthammomani/ClusterLens"
"Source"   = "https://github.com/akthammomani/ClusterLens"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["clusterlens*"]
